samples/_failures_safe/1761343673_2074ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0a84e289.c: In function ‘main’:
./samples/SAFE/__tmp_0a84e289.c:131:5: error: expected declaration or statement at end of input
  131 |     int point_count, dimension;
      |     ^~~
